force-app/main/default/objects/SMS_Onetime_Product_Mapping__c/SMS_Onetime_Product_Mapping__c.object-meta.xml
<CustomObject>
    <label>SMS Onetime Product Mapping</label>
    <nameField>
        <displayFormat>OnetimeMapping-{00000}</displayFormat>
        <label>SMS Onetime Product Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Onetime Product Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>