force-app/main/default/objects/SMS_Onetime_Product_Mapping__c/fields/Current_Product_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Product_Sub_Type__c</fullName>
    <label>Current Product Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>XactSite Office IDX Orig</fullName>
            </value>
            <value>
                <fullName>XactSite Agent IDX Orig</fullName>
            </value>
            <value>
                <fullName>XactSite Office Website Orig</fullName>
            </value>
            <value>
                <fullName>XactSite Premium Orig</fullName>
            </value>
            <value>
                <fullName>XactSite Total Orig</fullName>
            </value>
            <value>
                <fullName>XactSite Select Orig</fullName>
            </value>
            <value>
                <fullName>realPING</fullName>
            </value>
            <value>
                <fullName>Authentisign</fullName>
            </value>
            <value>
                <fullName>Does Not Exist</fullName>
            </value>
            <value>
                <fullName>XactSite Office IDX 2016</fullName>
            </value>
            <value>
                <fullName>XactSite Office Website 2016</fullName>
            </value>
            <value>
                <fullName>XactSite Agent IDX 2016</fullName>
            </value>
            <value>
                <fullName>XactSite Premium 2016</fullName>
            </value>
            <value>
                <fullName>XactSite Total 2016</fullName>
            </value>
            <value>
                <fullName>XactSite Select 2016</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>