force-app/main/default/objects/SMS_Onetime_Product_Mapping__c/fields/Current_Rate_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Rate_Plan_ID__c</fullName>
    <label>Current Rate Plan ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>