force-app/main/default/objects/SMS_Onetime_Product_Mapping__c/fields/New_Product_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Sub_Type__c</fullName>
    <label>New Product Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authentisign</fullName>
            </value>
            <value>
                <fullName>CloudCMA 1 Year</fullName>
            </value>
            <value>
                <fullName>CloudCMA Monthly</fullName>
            </value>
            <value>
                <fullName>realPING</fullName>
            </value>
            <value>
                <fullName>Social Pro Annual</fullName>
            </value>
            <value>
                <fullName>Social Pro Monthly</fullName>
            </value>
            <value>
                <fullName>Social Pro Office</fullName>
            </value>
            <value>
                <fullName>Sphere by Bright MLS Agent IDX</fullName>
            </value>
            <value>
                <fullName>Sphere by Bright MLS Basic</fullName>
            </value>
            <value>
                <fullName>Sphere by Bright MLS Office IDX</fullName>
            </value>
            <value>
                <fullName>Sphere by Bright MLS Pro</fullName>
            </value>
            <value>
                <fullName>Sphere Office by Bright MLS</fullName>
            </value>
            <value>
                <fullName>XactSite Agent IDX</fullName>
            </value>
            <value>
                <fullName>XactSite Agent IDX 2016</fullName>
            </value>
            <value>
                <fullName>XactSite Agent IDX Orig</fullName>
            </value>
            <value>
                <fullName>XactSite Office IDX</fullName>
            </value>
            <value>
                <fullName>XactSite Office IDX 2016</fullName>
            </value>
            <value>
                <fullName>XactSite Office IDX Orig</fullName>
            </value>
            <value>
                <fullName>XactSite Office Website</fullName>
            </value>
            <value>
                <fullName>XactSite Office Website 2016</fullName>
            </value>
            <value>
                <fullName>XactSite Office Website Orig</fullName>
            </value>
            <value>
                <fullName>XactSite Premium</fullName>
            </value>
            <value>
                <fullName>XactSite Premium 2016</fullName>
            </value>
            <value>
                <fullName>XactSite Premium Orig</fullName>
            </value>
            <value>
                <fullName>XactSite Select</fullName>
            </value>
            <value>
                <fullName>XactSite Select 2016</fullName>
            </value>
            <value>
                <fullName>XactSite Select Orig</fullName>
            </value>
            <value>
                <fullName>XactSite Total</fullName>
            </value>
            <value>
                <fullName>XactSite Total 2016</fullName>
            </value>
            <value>
                <fullName>XactSite Total Orig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>