force-app/main/default/objects/SMS_Onetime_Product_Mapping__c/fields/New_Rate_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Rate_Plan_ID__c</fullName>
    <label>New Rate Plan ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>