force-app/main/default/objects/SMS_Onetime_Product_Mapping__c/fields/Zuora_OnetimeProductRatePlan_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_OnetimeProductRatePlan_Id__c</fullName>
    <label>Zuora_OnetimeProductRatePlan Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>