force-app/main/default/objects/SMS_Onetime_Product_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Zuora_OnetimeProductRatePlan_Id__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Current_Product_Sub_Type__c</columns>
    <columns>New_Product_Sub_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>